# colonio

./: .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CNAME  Dockerfile  Doxyfile  Doxyfile-cpp  Doxyfile-mcss  LICENSE  Makefile  README.md  book.min.e4a94f1445504c74249e4bdc709ccefba75d9cb73af5e7f35a74aec38549244b.css  buf.yaml  build.sh  ci.sh  colonio.go  colonio.proto  en.search-data.min.b6299e210f512d51a0355f6af15ae875d1a104c9bf249f87560b5a6e74cb4f10.json  en.search.min.74109bfac6dc12f3d2c5094e415161aa5580d1d0f440473ebfc154dfb86c7296.js  go.mod  go.sum  index.html  index.xml  main.go  maintenance.md  manifest.json  network.go  package-lock.json  package.json  pnpm-lock.yaml  sitemap.xml  tsconfig.json  valgrind.supp  webpack.config.js
.github/workflows/: ci.yaml  gh-pages.yml  main.yaml
api-cpp/: index.html
api/core/: core.proto  node_accessor_protocol.proto  protocol.proto  seed_accessor_protocol.proto
buildenv/: Dockerfile
categories/: index.html  index.xml
cmd/: root.go  run.go
cmd/seed/: main.go
cmd/test-luncher/: main.go
config/: config.go  config_test.go  kvs.go  observation.go
doc/ja/: architecture.adoc
docs/: config.yaml
docs/assets/: _custom.scss
docs/content/: _index.md  api-cpp.md  overview.md
go/: Makefile
go/colonio/: colonio.c  colonio_native.go  colonio_wasm.go  error.go  types.go
go/doc-tool/: cpp.go
go/proto/: colonio.pb.go  core.pb.go  node_accessor_protocol.pb.go  seed_accessor_protocol.pb.go
go/seed/: config.go  constants.go  seed.go  seed_test.go  utils.go
go/service/: config.go  service.go
go/test/: e2e_test.go  index.html  main_native_test.go  main_wasm_test.go  seed.json  single_node_test.go  suite_test.go
internal/c/: webrtc.h  webrtc.hpp  webrtc_config.cpp  webrtc_link.cpp
internal/constants/: kvs.go  packet_error.go  testing.go
internal/geometry/: coordinate.go  geometry.go  plane.go  plane_test.go  sphere.go  sphere_test.go
internal/kvs/: kvs.go  kvs_gateway.go  kvs_infrastructure.go  kvs_test.go  logger_empty.go  logger_wrapper.go  node.go  store.go  (+8 more)
main/: go.mod  go.sum  main.go
md/: images.key
node/: node.go
overview/: index.html
proto/: colonio.pb.go  colonio.proto  protocol.pb.go  seed.pb.go  seed.proto  seed_accessor_protocol.pb.go  seed_grpc.pb.go
sample/: CMakeLists.txt
sample/simple_c/: main.c
sample/simple_cpp/: main.cpp
sample/simple_py/: main.py
sample/simulate/: seed.json  simulate.cpp  simulate.pyde
sample/simulate/simulate/: simulate.pyde
seed/: config.go  constants.go  go.mod  gopool.go  seed.go  seed_test.go  session.go  test_helper.go  utils.go
service/: config.go  service.go
simulator/: Dockerfile  Makefile  README.md
src/: CMakeLists.txt  go.mod  go.sum  main.go  main.ts  seed_transport.ts  webrtc.ts
src/c/colonio/: colonio.h
src/colonio/: colonio.h  colonio.hpp  colonio_exception.hpp  colonio_libuv.hpp  constant.hpp  definition.hpp  error.hpp  exception.hpp  map.hpp  pubsub_2d.hpp  value.hpp
src/core/: api.proto  api_base.cpp  api_base.hpp  api_bundler.cpp  api_bundler.hpp  api_entry.cpp  api_entry.hpp  api_entry_bundler.cpp  api_entry_bundler.hpp  api_gate.cpp  api_gate.hpp  api_gate_mt.cpp  api_gate_mt.hpp  api_gate_wasm.cpp  api_gate_wasm.hpp  api_module.cpp  api_module.hpp  api_module_bundler.cpp  api_module_bundler.hpp  colonio.cpp  colonio_api.proto  colonio_exception.cpp  colonio_impl.cpp  colonio_impl.hpp  colonio_module.cpp  colonio_module.hpp  colonio_module_protocol.proto  command.cpp  command.hpp  command_manager.cpp  command_manager.hpp  context.cpp  context.hpp  controller.cpp  controller.hpp  convert.cpp  convert.hpp  coord_system.cpp  coord_system.hpp  coord_system_plane.cpp  (+117 more)
src/core/map_paxos/: map_paxos.cpp  map_paxos.hpp  map_paxos_protocol.proto
src/core/md5/: md5.c  md5.h
src/core/pubsub_2d/: pubsub_2d_impl.cpp  pubsub_2d_impl.hpp  pubsub_2d_protocol.proto
src/cpp/colonio/: colonio.hpp  colonio_libuv.hpp  constant.hpp  map.hpp  pubsub_2d.hpp  value.hpp
src/js/: api.js  colonio_go.js  colonio_go.ts  colonio_golang.js  core.d.ts  core.ts  export.js  main.cpp  outline.js
src/main/: go.mod  go.sum  main.go
src/map_paxos/: map_paxos.cpp  map_paxos.hpp  map_paxos_api.cpp  map_paxos_api.hpp  map_paxos_entry.cpp  map_paxos_entry.hpp  map_paxos_module.cpp  map_paxos_module.hpp  map_paxos_protocol.proto
src/proto/: go.mod  node_accessor_protocol.pb.go
src/pubsub_2d/: pubsub2d_api.cpp  pubsub2d_api.hpp  pubsub2d_module.cpp  pubsub2d_module.hpp  pubsub_2d_api.cpp  pubsub_2d_api.hpp  pubsub_2d_impl.cpp  pubsub_2d_impl.hpp  pubsub_2d_module.cpp  pubsub_2d_module.hpp  pubsub_2d_protocol.proto
src/python/: main.cpp
src/seed/: go.mod  go.sum  seed.go
src/simulate/: simulate.cpp
src/simulate/simulate/: simulate.pyde
tags/: index.html  index.xml
test/: CMakeLists.txt  e2e_test.go  index.html  main_native_test.go  main_wasm_test.go  seed.json  single_node_test.go
test/cmd/luncher/: main.go  seed_transport.go
test/combine/: call_test.cpp  connect_test.cpp  export_c_test.cpp  kvs_test.cpp  map_test.cpp  messaging_test.cpp  pubsub_2d_test.cpp  spread_test.cpp
test/core/: coord_system_plane_test.cpp  coordinate_test.cpp  exception_test.cpp  logger_test.cpp  node_id_test.cpp  routing_2d_test.cpp  scheduler_native_test.cpp  seed_accessor_test.cpp  seed_link_native_test.cpp  user_thread_pool_test.cpp  utils_test.cpp  value_impl_test.cpp  value_test.cpp
test/e2e/: e2e.go  e2e_native_test.go  e2e_wasm_test.go  single_node_messaging.go
test/go/: e2e.go  seed_config.json  test_suite_test.go
test/js/: README.md  index.html  seed.json  test.js
test/luncher/: main.go  seed.json
test/test_utils/: all.hpp  async_helper.hpp  colonio_node.hpp  log_helper.hpp  test_seed.hpp
test/testing_seed/: testing_seed.go
test/util/: gateway_helper.go  handler_helper.go  ice_servers.go  testing_seed.go  util.go
test/util/helper/: gateway.go
test/util/server/: gateway_helper.go  server.go
types/: colonio.go  kvs_state.go  node_id.go  node_id_test.go
work/: .gitignore  Dockerfile  LICENSE  go.sum
(+259 files in other folders)
